--- a/艾仕得/yemian2/zhuye.html
+++ b/艾仕得/yemian2/zhuye.html
@@ -48,7 +48,7 @@
             <img src="aishide3.jpg" alt="" class="img-others">
         </a>
         <img src="aishide4.jpg" alt="" class="w100 block">
-        <a href="艾仕得\yemian2-4\root.html">  
+        <a href="艾仕得/yemian2-4/root.html">  
             <img src="aishide5.jpg" alt="" class="w100 block">
         </a>
     </div>
