--- a/艾仕得/yemian2/zhuye.html
+++ b/艾仕得/yemian2/zhuye.html
@@ -40,7 +40,7 @@
     <div class="container">
         <img src="aishide1.jpg" alt="" class="img1">
         <!-- 将 aishide2.jpg 设置为可点击的链接，跳转到 zhuye2-1.html -->
-        <a href="艾仕得\yemian2-1\zhuye2-1.html">
+        <a href="zhuye2-1.html">
             <img src="aishide2.jpg" alt="" class="img2">
         </a>
 
@@ -48,7 +48,7 @@
             <img src="aishide3.jpg" alt="" class="img-others">
         </a>
         <img src="aishide4.jpg" alt="" class="w100 block">
-        <a href="艾仕得/yemian2-4/root.html">  
+        <a href="yemian2-4/root.html">  
             <img src="aishide5.jpg" alt="" class="w100 block">
         </a>
     </div>
