--- a/saoma.html
+++ b/saoma.html
@@ -16,42 +16,38 @@
             font-family: Arial, sans-serif;
             flex-direction: column;
         }
-        .scan-line {
-            width: 80%;
-            height: 4px;
-            background-color: red;
-            animation: scan 2s linear infinite;
-            position: relative;
-        }
         .scan-frame {
             width: 80%;
             max-width: 300px;
             height: 300px;
-            border: 2px solid #fff;
             margin-bottom: 20px;
-            position: relative;
-        }
-
-        @keyframes scan {
-            0% { top: 0; }
-            100% { top: 100%; }
         }
     </style>
+    <!-- 引入 html5-qrcode 库 -->
+    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
 </head>
 <body>
-    <div class="scan-frame">
-        <div class="scan-line"></div>
-    </div>
+    <div class="scan-frame" id="reader"></div>
     <p>二维码扫描中...</p>
 
     <script>
-        // 模拟扫码完成后的操作
-        setTimeout(function() {
-            // 假设扫描成功后，增加扫码次数并跳转
-            var currentCount = localStorage.getItem('scanCount') || 0;
-            localStorage.setItem('scanCount', parseInt(currentCount) + 1);
+        // 使用 html5-qrcode 进行二维码扫描
+        function onScanSuccess(decodedText, decodedResult) {
+            console.log(`扫描成功: ${decodedText}`);
+            // 保存扫描结果或执行其他操作
+            localStorage.setItem('scanResult', decodedText);
+            // 跳转到目标页面
             window.location.href = "message.html";
-        }, 3000); // 3秒后重定向
+        }
+
+        function onScanFailure(error) {
+            console.warn(`扫描失败: ${error}`);
+        }
+
+        // 创建 Html5QrcodeScanner 对象
+        let html5QrcodeScanner = new Html5QrcodeScanner(
+            "reader", { fps: 10, qrbox: 250 });
+        html5QrcodeScanner.render(onScanSuccess, onScanFailure);
     </script>
 </body>
 </html>
